--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -11,18 +11,18 @@
     <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.3.2" />
     <PackageVersion Include="Avalonia.Fonts.Inter" Version="11.3.2" />
     <PackageVersion Include="Avalonia.Diagnostics" Version="11.3.2" />
-	<PackageVersion Include="Avalonia.Controls.ColorPicker" Version="11.3.2" />
+    <PackageVersion Include="Avalonia.Controls.ColorPicker" Version="11.3.2" />
     <PackageVersion Include="Avalonia.Desktop" Version="11.3.2" />
     <PackageVersion Include="Avalonia.iOS" Version="11.3.2" />
     <PackageVersion Include="Avalonia.Browser" Version="11.3.2" />
     <PackageVersion Include="Avalonia.Android" Version="11.3.2" />
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-    <PackageVersion Include="Material.Icons.Avalonia" Version="2.4.1" />
+    <PackageVersion Include="Material.Icons.Avalonia" Version="3.0.0-preview3.1" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
     <PackageVersion Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
     <PackageVersion Include="Svg.Controls.Skia.Avalonia" Version="11.3.0.3" />
     <PackageVersion Include="System.Reactive" Version="6.0.1" />
     <PackageVersion Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.15" />
-    <PackageVersion Include="Material.Avalonia" Version="3.1.2" />
+    <PackageVersion Include="Material.Avalonia" Version="3.13.0" />
   </ItemGroup>
 </Project>
